committing some changes before testing larger edits

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
         </tbody>
     </table>
 </div>
-
+<a th:href="@{users/uploadimgform}" class="btn btn-info">Upload an image</a>
 
 <div th:if="${products == null || #lists.isEmpty(products)}">
     <p>No Products available at the moment.</p>
