--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -33,6 +33,7 @@
         </tbody>
     </table>
     <a th:href="@{/}" class="btn btn-info">Back to All Products</a>
+    <a th:href="@{/seller/products}" class="btn btn-info">Back to All Products</a>
 </div>
 
 </body>
