--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -7,7 +7,7 @@
 
 <div class="container my-5">
 
-    <form th:action="@{/product/saveProduct}" th:object="${product}" method="post" class="form col-5 mx-auto" enctype="multipart/form-data">
+    <form th:action="@{/seller/saveProduct}" th:object="${product}" method="post" class="form col-5 mx-auto" enctype="multipart/form-data">
 
         <h2 class="text-center mb-3">Create a product</h2>
 
