--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <div th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}">
-        <a th:href="@{/product/add}" class="btn btn-info">Add a product</a>
+        <a th:href="@{/seller/add}" class="btn btn-info">Add a product</a>
     </div>
 
     <h1>List of Products</h1>
@@ -49,9 +49,10 @@
             </td>
             <td>
                 <a th:href="@{/product/{id}(id=${product.id})}" class="btn btn-info">View</a>
+
                 <span th:if="${isSellerEqualUser}">
-                    <a th:href="@{/product/edit/{id}(id=${product.id})}" class="btn btn-info">Edit</a>
-                    <a th:href="@{/product/delete/{id}(id=${product.id})}" class="btn btn-info ml-2">Delete</a>
+                    <a th:href="@{/seller/edit/{id}(id=${product.id})}" class="btn btn-info">Edit</a>
+                    <a th:href="@{/seller/delete/{id}(id=${product.id})}" class="btn btn-info ml-2">Delete</a>
                 </span>
             </td>
         </tr>
