Finalize product and seller
- Product image can be uploaded to S3, saved in the database, and displayed in the app
- Solved a few remaining bugs related to seller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
             <td th:text="${product.description}"></td>
             <td th:text="'$' + ${#numbers.formatDecimal(product.price, 1, 2)}"></td>
             <td th:if="${product.imageUrl == null}">No image found.</td>
-            <td th:if="${product.imageUrl}">
+            <td th:if="${product.imageUrl != null}">
                 <img th:src="@{${product.imageUrl}}" alt="Product Image" />
             </td>
             <td>
