--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -13,8 +13,9 @@
 
         <div class="form-group mb-3">
             <label for="category">Category</label>
-            <input id="category" class="form-control" type="number" th:field="*{prodCategory}">
+            <input id="category" class="form-control" type="number" th:field="*{prodCategory.id}">
             <div class="alert alert-warning" th:if="${#fields.hasErrors('prodCategory')}" th:errors="*{prodCategory}"></div>
+
         </div>
 
         <div class="form-group mb-3">
