--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -49,6 +49,7 @@
 
         <div class="form-group mb-3">
             <label for="productImage">Upload Image of the product:</label>
+            <input type="hidden" th:field="*{imageUrl}" >
             <input type="file" id="productImage" name="file">
         </div>
 
