Bug related to edit product validation
If a user tries to edit a product and the validation fails, the list of categories still appear in the form.

--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -17,7 +17,8 @@
                 <option value="" disabled selected>Select a category</option>
                 <option th:each="category : ${categories}"
                         th:value="${category.id}"
-                        th:text="${category.name}"></option>
+                        th:text="${category.name}">
+                </option>
             </select>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('prodCategory')}" th:errors="*{prodCategory}"></div>
 
