admin categories done, some work on admin users

--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -29,7 +29,7 @@
                 <td th:text="${user.email}"></td>
                 <td th:text="${user.role}"></td>
                 <td>
-                    <a th:href="@{/admin/categories/edit/{id}(id=${user.id})}" class="btn btn-sm btn-warning">Edit</a>
+                    <a th:href="@{/admin/users/edit/{id}(id=${user.id})}" class="btn btn-sm btn-warning">Edit</a>
                 </td>
 
             </tr>
