--- a/src/main/resources/templates/admin-categories.html
+++ b/src/main/resources/templates/admin-categories.html
@@ -24,12 +24,15 @@
                 <td th:text="${category.id}"></td>
                 <td th:text="${category.name}"></td>
                 <td>
-                    <a th:href="@{/admin/categories/edit/{id}(id=${category.id})}" class="btn btn-sm btn-warning">Edit</a>
-                    <form th:action="@{/admin/categories/delete/{id}(id=${category.id})}" method="post" style="display: inline;">
+                    <a th:href="@{/admin/categories/edit/{id}(id=${category.id})}" class="btn btn-sm btn-warning">Edit Name</a>
+                    <form th:if="${category.isDeleted} == false" th:action="@{/admin/categories/delete/{id}(id=${category.id})}" method="post" style="display: inline;">
                         <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this category?')">Delete</button>
                     </form>
+                    <form th:if="${category.isDeleted} == true" th:action="@{/admin/categories/restore/{id}(id=${category.id})}" method="post" style="display: inline;">
+                        <button type="submit" class="btn btn-sm btn-warning" onclick="return confirm('Are you sure you want to restore this category?')">Restore</button>
+                    </form>
                 </td>
-                <td th:text="${category.isDeleted}"></td>
+                <td th:text="${category.isDeleted} == true ? 'Deleted' : 'Active'"></td>
 
             </tr>
             </tbody>
