--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Settings')"></head>
+<head th:replace="fragments/head :: head('Settings')">
+</head>
 
 
 <body class="d-flex align-items-center justify-content-center">
@@ -11,29 +12,39 @@
 
         <h3 class="text-center mb-3" th:text="'Welcome to your settings, ' + ${user.username}"></h3>
 
-
         <div class="form-group mb-3">
             <label for="email">Email</label>
-            <input id="email" class="form-control" type="text" th:field="*{email}" disabled>
-            <button>Edit</button>
+            <div style="display: flex">
+                <input id="email" class="form-control" type="text" th:field="*{email}" disabled>
+                <span class="enable-edit" onclick="enableInput('email')">Edit</span>
+            </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
         </div>
 
         <div class="form-group mb-3">
             <label for="password">Password:</label>
-            <input id="password" class="form-control" type="password" th:field="*{password}">
+            <div style="display: flex">
+                <input id="password" class="form-control" type="password" th:field="*{password}" disabled>
+                <span class="enable-edit" onclick="enableInput('password')">Edit</span>
+            </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
         </div>
 
         <div class="form-group mb-3">
             <label for="address">Address:</label>
-            <input id="address" class="form-control" type="text" th:field="*{address}">
-            <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
+            <div style="display: flex">
+                <input id="address" class="form-control" type="text" th:field="*{address}" disabled>
+                <span class="enable-edit" onclick="enableInput('address')">Edit</span>
+            </div>
+                <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
         </div>
 
         <div class="form-group mb-3">
             <label for="creditCard">Credit card:</label>
-            <input id="creditCard" class="form-control" type="number" th:field="*{creditCard}">
+            <div style="display: flex">
+                <input id="creditCard" class="form-control" type="number" th:field="*{creditCard}" disabled>
+                <span class="enable-edit" onclick="enableInput('creditCard')">Edit</span>
+            </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('creditCard')}" th:errors="*{creditCard}"></div>
         </div>
 
@@ -53,5 +64,12 @@
     <hr/>
     <a th:href="@{/}">Back to home page</a>
 </div>
+
+
+<script>
+    function enableInput(inputId) {
+        document.getElementById(inputId).disabled=false;
+    }
+</script>
 </body>
 </html>
