--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,14 @@
 
                 <span th:if="${isSellerEqualUser}">
                     <a th:href="@{/seller/edit/{id}(id=${product.id})}" class="btn btn-info">Edit</a>
-                    <a th:href="@{/seller/delete/{id}(id=${product.id})}" class="btn btn-info ml-2">Delete</a>
+                    <form th:if="${product.isDeleted} == false" th:action="@{/seller/delete/{id}(id=${product.id})}" style="display: inline;">
+                        <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this product?')">Delete</button>
+                    </form>
+                    <form th:if="${product.isDeleted} == true" th:action="@{/seller/restore/{id}(id=${product.id})}" style="display: inline;">
+                        <button type="submit" class="btn btn-sm btn-warning" onclick="return confirm('Are you sure you want to restore this product?')">Restore</button>
+                    </form>
+<!--                    <a th:if="${product.isDeleted} == false" th:href="@{/seller/delete/{id}(id=${product.id})}" class="btn btn-danger ml-2">Delete</a>-->
+<!--                    <a th:if="${product.isDeleted} == true" th:href="@{/seller/restore/{id}(id=${product.id})}" class="btn btn-warning ml-2">Restore</a>-->
                 </span>
             </td>
         </tr>
