--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -8,15 +8,15 @@
 
 <div class="container my-5">
 
-    <form th:action="@{/users/settings}" th:object="${user}" method="post" class="form col-5 mx-auto" enctype="multipart/form-data">
+    <form th:action="@{/users/settings/edit}" th:object="${user}" method="post" class="form col-5 mx-auto" enctype="multipart/form-data">
 
-        <h3 class="text-center mb-3" th:text="'Welcome to your settings, ' + ${user.username}"></h3>
+        <h3 class="text-center mb-3" >Settings</h3>
 
         <div class="form-group mb-3">
             <label for="email">Email</label>
             <div style="display: flex">
                 <input id="email" class="form-control" type="text" th:field="*{email}" disabled>
-                <span class="enable-edit" onclick="enableInput('email')">Edit</span>
+                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('email')">Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
         </div>
@@ -25,7 +25,7 @@
             <label for="password">Password:</label>
             <div style="display: flex">
                 <input id="password" class="form-control" type="password" th:field="*{password}" disabled>
-                <span class="enable-edit" onclick="enableInput('password')">Edit</span>
+                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('password')">Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
         </div>
@@ -34,7 +34,7 @@
             <label for="address">Address:</label>
             <div style="display: flex">
                 <input id="address" class="form-control" type="text" th:field="*{address}" disabled>
-                <span class="enable-edit" onclick="enableInput('address')">Edit</span>
+                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('address')">Edit</span>
             </div>
                 <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
         </div>
@@ -42,8 +42,8 @@
         <div class="form-group mb-3">
             <label for="creditCard">Credit card:</label>
             <div style="display: flex">
-                <input id="creditCard" class="form-control" type="number" th:field="*{creditCard}" disabled>
-                <span class="enable-edit" onclick="enableInput('creditCard')">Edit</span>
+                <input id="creditCard" class="form-control" type="text" th:field="*{creditCard}" disabled>
+                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('creditCard')">Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('creditCard')}" th:errors="*{creditCard}"></div>
         </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary" onclick="return confirmSave()">Save</button>
         </div>
 
         <input type="hidden" th:field="*{id}"/>
@@ -69,6 +69,11 @@
 <script>
     function enableInput(inputId) {
         document.getElementById(inputId).disabled=false;
+    }
+
+    function confirmSave() {
+        document.querySelectorAll('input').forEach(input => input.disabled = false);
+        return confirm('Are you sure you want to save the changes?');
     }
 </script>
 </body>
