added a header fragment for easier navigation

--- a/src/main/resources/templates/admin-categories.html
+++ b/src/main/resources/templates/admin-categories.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: head('Admin Category Overview')"></head>
 <body>
+<div th:replace="fragments/header"></div>
 
 <a th:href="@{/admin/categories/add}" class="btn btn-primary mt-auto">Add a new Category</a>
 
