--- a/src/main/resources/templates/admin-main.html
+++ b/src/main/resources/templates/admin-main.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: head('Admin Directory')"></head>
 <body>
+<div th:replace="fragments/header"></div>
 <div class="container mt-5">
     <h1 class="text-center mb-5">Admin Directory</h1>
 
