--- a/src/main/resources/templates/admin-categories-add.html
+++ b/src/main/resources/templates/admin-categories-add.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Add Category')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Add Category')}"></head>
 <body>
 <div class="card mb-4">
     <div class="card-header">
