--- a/src/main/resources/templates/admin-categories-edit.html
+++ b/src/main/resources/templates/admin-categories-edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head('Edit Category')}"></head>
 <body>
 <div class="card mb-4">
