--- a/src/main/resources/templates/admin-main.html
+++ b/src/main/resources/templates/admin-main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Admin Directory')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Admin Directory')}"></head>
 <body>
 <div th:replace="fragments/header"></div>
 <div class="container mt-5">
