--- a/src/main/resources/templates/register-form.html
+++ b/src/main/resources/templates/register-form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Register')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Register')}"></head>
 
 
 <body class="d-flex align-items-center justify-content-center">
