--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Register success')"></head>
+<head th:replace="~{fragments/head :: head('Register success')}"></head>
 
 <body class="d-flex align-items-center justify-content-center">
 
