--- a/src/main/resources/templates/admin-users-add.html
+++ b/src/main/resources/templates/admin-users-add.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Add User')"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Add User')}"></head>
 <body>
 <div class="card mb-4">
     <div class="card-header">
