--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Products</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Shop Till You Drop || Home')}"></head>
 <body>
 
-<div th:replace="fragments/header"></div>
-
-<div th:if="${message}" class="alert alert-success">
-    <p th:text="${message}"></p>
-</div>
+<div th:replace="~{fragments/header}"></div>
 
 <h1>Products</h1>
 
