--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head>
-<!--    TODO We could have bootstrap as a package in our project?-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Login to Todos</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head('Login')}"></head>
 <body>
 
 <!--TODO Greets user based on if they're logged in-->
-<!--<div>-->
-<!--    <span sec:authorize="isAnonymous()">-->
-<!--        Welcome! You're in the right place.-->
-<!--    </span>-->
-<!--    <span sec:authorize="isAuthenticated()">-->
-<!--        Welcome, <span sec:authentication="name">-->
-<!--    </span>! You're already logged in.-->
-<!--        <a th:href="@{/logout}" class="btn btn-danger p-2">Logout</a>-->
-<!--        <a th:href="@{/}" class="btn btn-primary p-2">Browse front page of products</a>-->
-<!--    </span>-->
-<!--</div>-->
 
 <!--This is for flash messages-->
 <div th:if="${message}" class="alert alert-success">
