--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -15,8 +15,8 @@
         <div class="form-group mb-3">
             <label for="email">Email</label>
             <div style="display: flex">
-                <input id="email" class="form-control" type="text" th:field="*{email}" disabled>
-                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('email')">Edit</span>
+                <input id="email" class="form-control" type="text" th:field="*{email}" >
+                <span class="btn btn-outline-primary btn-md ms-2" >Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
         </div>
@@ -24,8 +24,8 @@
         <div class="form-group mb-3">
             <label for="password">Password:</label>
             <div style="display: flex">
-                <input id="password" class="form-control" type="password" th:field="*{password}" disabled>
-                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('password')">Edit</span>
+                <input id="password" class="form-control" type="password" th:field="*{password}" >
+                <span class="btn btn-outline-primary btn-md ms-2" >Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
         </div>
@@ -33,17 +33,17 @@
         <div class="form-group mb-3">
             <label for="address">Address:</label>
             <div style="display: flex">
-                <input id="address" class="form-control" type="text" th:field="*{address}" disabled>
-                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('address')">Edit</span>
+                <input id="address" class="form-control" type="text" th:field="*{address}" >
+                <span class="btn btn-outline-primary btn-md ms-2" >Edit</span>
             </div>
-                <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
+            <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
         </div>
 
         <div class="form-group mb-3">
             <label for="creditCard">Credit card:</label>
             <div style="display: flex">
-                <input id="creditCard" class="form-control" type="text" th:field="*{creditCard}" disabled>
-                <span class="btn btn-outline-primary btn-md ms-2" onclick="enableInput('creditCard')">Edit</span>
+                <input id="creditCard" class="form-control" type="text" th:field="*{creditCard}" >
+                <span class="btn btn-outline-primary btn-md ms-2" >Edit</span>
             </div>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('creditCard')}" th:errors="*{creditCard}"></div>
         </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div>
-            <button type="submit" class="btn btn-primary" onclick="return confirmSave()">Save</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
 
         <input type="hidden" th:field="*{id}"/>
@@ -65,18 +65,5 @@
     <a th:href="@{/}">Back to home page</a>
 </div>
 
-
-<script>
-    function enableInput(inputId) {
-        document.getElementById(inputId).disabled=false;
-    }
-
-    function confirmSave() {
-        document.querySelectorAll('input:disabled').forEach(input => {
-            input.disabled = false;
-        });
-        return confirm('Are you sure you want to save the changes?');
-    }
-</script>
 </body>
 </html>
