--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,13 @@
 <body>
 
 <div th:replace="fragments/header"></div>
+<div th:if="${#authorization.expression('isAuthenticated()')}"><a th:href="@{/users/settings}">Account settings</a></div>
+
 
 <div th:if="${message}" class="alert alert-success">
     <p th:text="${message}"></p>
 </div>
+
 
 <h1>Products</h1>
 
@@ -59,7 +62,7 @@
         </tbody>
     </table>
 </div>
-<a th:href="@{/users/uploadimgform}" class="btn btn-info">Upload an image</a>
+
 
 <div th:if="${products == null || #lists.isEmpty(products)}">
     <p>No Products available at the moment.</p>
