some extra links and fixes to admin

--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -4,6 +4,7 @@
 <body>
 <div th:replace="~{fragments/header}"></div>
 <div class="card">
+    <a th:href="@{/admin/users/add}" class="btn btn-primary mt-auto">Add a User</a>
     <div class="card-header">
         <h5 class="mb-0">Existing Users</h5>
     </div>
