looking into error

--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -35,11 +35,11 @@
         </tbody>
     </table>
 
-<!--    <form th:action="@{/api/cart/add}" method="post">-->
-<!--        <input type="hidden" name="productId" th:value="${product.id}"/>-->
-<!--        <input type="hidden" name="amount" value="1"/>-->
-<!--        <button type="submit">Add to Cart</button>-->
-<!--    </form>-->
+    <form th:action="@{/api/cart/add}" method="post">
+        <input type="hidden" name="productId" th:value="${product.id}"/>
+        <input type="hidden" name="amount" value="1"/>
+        <button type="submit">Add to Cart</button>
+    </form>
 
     <a th:href="@{/}" class="btn btn-info">Back to All Products</a>
 
