--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -47,5 +47,26 @@
         <a th:href="@{/seller/{sellerId}/products(sellerId=${sellerId})}" class="btn btn-info">Back to Your Products</a>
     </span>
 </div>
+<!--<script>-->
+<!--    function removeFromCart(productId) {-->
+<!--        fetch(`/api/cart/remove?productId=${productId}`, {-->
+<!--            method: 'DELETE',-->
+<!--        })-->
+<!--            .then(response => {-->
+<!--                if (!response.ok) {-->
+<!--                    throw new Error('Network response was not ok');-->
+<!--                }-->
+<!--                return response.json();-->
+<!--            })-->
+<!--            .then(data => {-->
+<!--                console.log('Item removed', data);-->
+<!--                // Reload the page to reflect the updated cart-->
+<!--                location.reload();-->
+<!--            })-->
+<!--            .catch((error) => {-->
+<!--                console.error('Error:', error);-->
+<!--            });-->
+<!--    }-->
+<!--</script>-->
 </body>
 </html>
