--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -9,7 +9,8 @@
 </div>
 
 <div th:if="${product}">
-    <h1 th:if="${product.isDeleted} == true" class="text-warning">This product has been delisted and is not for sale.</h1>
+    <h1 th:if="${product.isDeleted} == true" class="text-danger">This product has been delisted and is not for sale.</h1>
+    <h1 th:if="${product.stockAmount} == 0" class="text-warning">This product is out of stock. Please check back later.</h1>
     <h1 th:text="${product.name}"></h1>
     <table class="table table-bordered table-striped" id="productTable">
         <thead>
@@ -36,9 +37,10 @@
     </table>
 
 
-    <span>
+    <span th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_BUYER'')')} and ${product.isDeleted == false}
+    and ${product.stockAmount != 0}">
         <input type="hidden" name="productId" th:value="${product.id}"/>
-        <input type="number" name="amountProd" id="amountProd" value=""/>
+        <input type="number" name="amountProd" id="amountProd" value="1"/>
         <button th:onclick="'addToCart(' + ${product.id} + ', document.getElementById(\'amountProd\').value)'" type="button">Add to Cart</button>
     </span>
 
